[gd_scene load_steps=9 format=3 uid="uid://c17cp77x04s0a"]

[ext_resource type="Script" path="res://scripts/scene_manager.gd" id="1_8xxmm"]
[ext_resource type="PackedScene" uid="uid://dkwefay648mkm" path="res://scenes/main_menu.tscn" id="2_1n2y8"]
[ext_resource type="Texture2D" uid="uid://caxebt4mf5inh" path="res://Textures/Clock.png" id="3_g4vdg"]
[ext_resource type="FontFile" uid="uid://umsld0wd6w62" path="res://fonts/PixeloidSans-mLxMm.ttf" id="4_8vxkd"]
[ext_resource type="Script" path="res://scenes/TimerLabel.gd" id="5_q4fi6"]
[ext_resource type="PackedScene" uid="uid://c1hd0bmb78ktq" path="res://scenes/tasks/task_list_overlay.tscn" id="6_wgk5t"]
[ext_resource type="PackedScene" uid="uid://b8tgfy30wy4vm" path="res://scenes/pause_menu.tscn" id="7_1isje"]
[ext_resource type="PackedScene" uid="uid://jsavnfpsv3rj" path="res://scenes/transition_screen.tscn" id="8_jdf8u"]

[node name="SceneManager" type="Node"]
script = ExtResource("1_8xxmm")

[node name="MainMenu" parent="." instance=ExtResource("2_1n2y8")]

[node name="HUD" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="HUD"]
show_behind_parent = true
visibility_layer = 2
offset_left = 940.0
offset_top = 1.0
offset_right = 1151.0
offset_bottom = 108.0
texture = ExtResource("3_g4vdg")

[node name="TimerLabel" type="Label" parent="HUD"]
top_level = true
offset_left = 962.0
offset_top = 31.0
offset_right = 1034.0
offset_bottom = 90.0
theme_override_colors/font_color = Color(0.780392, 0, 0.0823529, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_8vxkd")
theme_override_font_sizes/font_size = 48
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("5_q4fi6")

[node name="TaskListOverlay" parent="HUD" instance=ExtResource("6_wgk5t")]

[node name="PauseMenu" parent="." instance=ExtResource("7_1isje")]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="TransitionScreen" parent="." instance=ExtResource("8_jdf8u")]
visible = false

[connection signal="scene_changed" from="MainMenu" to="." method="_on_main_menu_scene_changed"]
[connection signal="transitioned" from="TransitionScreen" to="." method="_on_transition_screen_transitioned"]
